--- a/client/src/utils/components/entityHeader/EntityHeader.scss
+++ b/client/src/utils/components/entityHeader/EntityHeader.scss
@@ -6,6 +6,7 @@
     border-radius: 8px;
     background-position-x: center;
     background-position-y: top;
+    overflow: hidden;
 }
 
 .entity-type-visibility {
